<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app8"
    tools:context=".EditFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="676dp"
        android:orientation="vertical"
        android:padding="@dimen/pading24">

        <TextView
            android:id="@+id/textView_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ed"
            android:textSize="@dimen/textsize" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstname" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editlast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname" />

            </android.support.design.widget.TextInputLayout>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editcity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editstreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/street" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number" />

        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:id="@+id/buttonsyy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mybuttons"
            android:text="@string/update" />
        <Button
            android:id="@+id/edit_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:background="@drawable/mybuttons"
            android:text="@string/foto" />
    </LinearLayout>
    <ImageView
        android:layout_width="@dimen/margin100"
        android:layout_height="@dimen/margin100"
        android:id="@+id/editimg"/>
    </LinearLayout>

</FrameLayout>