<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"

    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    android:background="@drawable/app9"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/btn_add"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_del"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="36dp"
        android:background="@drawable/mybuttons"
        android:text="@string/addbtn" />

    <Button
        android:id="@+id/btn_list"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_below="@+id/btn_add"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="36dp"
        android:background="@drawable/mybuttons"
        android:text="@string/list" />

    <!--<Button-->
    <!--android:id="@+id/btn_edit"-->
    <!--android:layout_width="182dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginStart="8dp"-->
    <!--android:layout_marginTop="220dp"-->
    <!--android:layout_marginEnd="8dp"-->
    <!--android:text="@string/update"-->
    <!--/>-->

    <Button
        android:id="@+id/btn_del"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_alignParentTop="true"

        android:layout_centerInParent="true"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:background="@drawable/mybuttons"
        android:text="@string/delete" />


</RelativeLayout>